--- a/briar-android/src/main/res/values/color.xml
+++ b/briar-android/src/main/res/values/color.xml
@@ -2,8 +2,10 @@
 <resources>
 	<color name="briar_blue">#2D3E50</color>
 	<color name="briar_blue_dark">#0F1720</color>
+	<color name="briar_blue_light">#4F6C8C</color>
 	<color name="briar_gold">#FCCF1C</color>
 	<color name="briar_green_light">#95D220</color>
+	<color name="briar_link">#06B9FF</color>
 
 	<color name="window_background">#eceff1</color>
 	<color name="action_bar_text">#FFFFFF</color>
@@ -19,22 +21,19 @@
 	<color name="control_normal_light">#757575</color>
 
 	<!-- text colors -->
-	<color name="briar_text_link">#06b9ff</color>
+	<color name="briar_text_link">@color/briar_link</color>
 	<color name="briar_text_primary">#df000000</color>
 	<color name="briar_text_primary_inverse">#ffffff</color>
 	<color name="briar_text_secondary">#8a000000</color>
 	<color name="briar_text_secondary_inverse">#b4ffffff</color>
 	<color name="briar_text_tertiary">#61000000</color>
 	<color name="briar_text_tertiary_inverse">#80ffffff</color>
-	<color name="briar_button_positive">#06b9ff</color>
+	<color name="briar_button_positive">@color/briar_link</color>
 	<color name="briar_button_negative">#ff0000</color>
 	<color name="briar_warning_background">#ff0000</color>
 	<color name="emoji_text_color">#ff000000</color>
 
 	<color name="emoji_pager_background">@color/window_background</color>
-
-	<!-- this is needed as preference_category_material layout uses this color as the text color -->
-	<color name="preference_fallback_accent_color">@color/briar_accent</color>
 
 	<color name="thread_indicator">#9e9e9e</color>
 	<color name="divider">#c1c1c1</color>
