--- a/briar-android/src/main/res/drawable/list_item_thread_background.xml
+++ b/briar-android/src/main/res/drawable/list_item_thread_background.xml
@@ -3,6 +3,10 @@
 	xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<item
+		android:drawable="@color/thread_item_background"
+		android:state_activated="false"/>
+
+	<item
 		android:drawable="@color/thread_item_highlight"
 		android:state_activated="true"/>
 
