--- a/briar-android/src/main/res/layout/fragment_keyagreement_qr.xml
+++ b/briar-android/src/main/res/layout/fragment_keyagreement_qr.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
@@ -14,19 +15,19 @@
 		android:id="@+id/camera_overlay"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:orientation="vertical"
-		android:baselineAligned="false">
+		android:baselineAligned="false"
+		android:orientation="vertical">
 
 		<LinearLayout
 			android:id="@+id/status_container"
 			android:layout_width="match_parent"
 			android:layout_height="0dp"
 			android:layout_weight="1"
-			android:background="@android:color/background_light"
 			android:gravity="center"
 			android:orientation="vertical"
 			android:padding="@dimen/margin_medium"
-			android:visibility="invisible">
+			android:visibility="invisible"
+			tools:visibility="visible">
 
 			<ProgressBar
 				style="?android:attr/progressBarStyleLarge"
@@ -65,46 +66,22 @@
 					android:layout_height="match_parent"
 					android:layout_centerInParent="true"
 					android:contentDescription="@string/qr_code"
-					android:scaleType="fitCenter"/>
+					android:scaleType="fitCenter"
+					tools:src="@drawable/startup_lock"/>
 
 				<ImageView
 					android:id="@+id/fullscreen_button"
-					android:background="?selectableItemBackground"
-					android:src="@drawable/ic_fullscreen_black_48dp"
-					android:alpha="0.54"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_margin="@dimen/margin_small"
 					android:layout_alignParentBottom="true"
-					android:layout_alignParentRight="true"
 					android:layout_alignParentEnd="true"
-					android:contentDescription="@string/show_qr_code_fullscreen"/>
+					android:layout_alignParentRight="true"
+					android:layout_margin="@dimen/margin_small"
+					android:alpha="0.54"
+					android:background="?selectableItemBackground"
+					android:contentDescription="@string/show_qr_code_fullscreen"
+					android:src="@drawable/ic_fullscreen_black_48dp"/>
 			</RelativeLayout>
 		</FrameLayout>
 	</LinearLayout>
-
-	<RelativeLayout
-		android:id="@+id/container_progress"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:background="@android:color/white"
-		android:visibility="invisible">
-
-		<ProgressBar
-			android:id="@+id/progress_bar"
-			style="?android:attr/progressBarStyleLarge"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_above="@+id/title_progress_bar"
-			android:layout_centerHorizontal="true"/>
-
-		<TextView
-			android:id="@+id/title_progress_bar"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_centerInParent="true"
-			android:gravity="center"
-			android:paddingTop="@dimen/margin_large"
-			tools:text="@string/waiting_for_contact_to_scan"/>
-	</RelativeLayout>
 </FrameLayout>
