--- a/briar-android/src/main/res/layout/text_input_view.xml
+++ b/briar-android/src/main/res/layout/text_input_view.xml
@@ -11,54 +11,46 @@
 		style="@style/Divider.Horizontal"
 		android:layout_alignParentTop="true"/>
 
-	<android.support.v7.widget.CardView
+	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		app:cardCornerRadius="0dp"
-		app:cardUseCompatPadding="false"
-		app:elevation="0dp">
+		android:background="@color/card_background">
 
-		<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content">
+		<org.thoughtcrime.securesms.components.emoji.EmojiToggle
+			android:id="@+id/emoji_toggle"
+			android:layout_width="@dimen/text_input_height"
+			android:layout_height="@dimen/text_input_height"
+			android:background="?attr/selectableItemBackground"
+			android:padding="@dimen/margin_small"
+			android:scaleType="center"
+			app:tint="?attr/colorControlNormal"/>
 
-			<org.thoughtcrime.securesms.components.emoji.EmojiToggle
-				android:id="@+id/emoji_toggle"
-				android:layout_width="@dimen/text_input_height"
-				android:layout_height="@dimen/text_input_height"
-				android:background="?attr/selectableItemBackground"
-				android:padding="@dimen/margin_small"
-				android:scaleType="center"
-				app:tint="?attr/colorControlNormal"/>
+		<org.thoughtcrime.securesms.components.emoji.EmojiEditText
+			android:id="@+id/input_text"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			android:background="@android:color/transparent"
+			android:inputType="textMultiLine|textCapSentences"
+			android:maxLines="3"
+			android:minHeight="@dimen/text_input_height"
+			android:textColor="?android:attr/textColorPrimary"
+			android:textColorHint="?android:attr/textColorTertiary"/>
 
-			<org.thoughtcrime.securesms.components.emoji.EmojiEditText
-				android:id="@+id/input_text"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:layout_weight="1"
-				android:background="@android:color/transparent"
-				android:inputType="textMultiLine|textCapSentences"
-				android:maxLines="3"
-				android:minHeight="@dimen/text_input_height"
-				android:textColor="?android:attr/textColorPrimary"
-				android:textColorHint="?android:attr/textColorTertiary"/>
+		<android.support.v7.widget.AppCompatImageButton
+			android:id="@+id/btn_send"
+			android:layout_width="@dimen/text_input_height"
+			android:layout_height="@dimen/text_input_height"
+			android:background="?attr/selectableItemBackground"
+			android:clickable="true"
+			android:contentDescription="@string/send"
+			android:enabled="false"
+			android:focusable="true"
+			android:padding="@dimen/margin_small"
+			android:src="@drawable/social_send_now_white"
+			app:tint="@color/briar_accent"/>
 
-			<ImageButton
-				android:id="@+id/btn_send"
-				android:layout_width="@dimen/text_input_height"
-				android:layout_height="@dimen/text_input_height"
-				android:background="?attr/selectableItemBackground"
-				android:clickable="true"
-				android:contentDescription="@string/send"
-				android:enabled="false"
-				android:focusable="true"
-				android:padding="@dimen/margin_small"
-				android:src="@drawable/social_send_now_white"
-				android:tint="@color/briar_accent"/>
-
-		</LinearLayout>
-
-	</android.support.v7.widget.CardView>
+	</LinearLayout>
 
 	<org.thoughtcrime.securesms.components.emoji.EmojiDrawer
 		android:id="@+id/emoji_drawer"
