--- a/briar-android/src/main/res/values-night/color.xml
+++ b/briar-android/src/main/res/values-night/color.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-	<color name="briar_accent">#476380</color>
+	<color name="briar_accent">@color/briar_blue_light2</color>
+	<color name="preference_category">@color/briar_blue_light2</color>
 
 	<color name="color_primary">#ffffff</color>
 	<color name="color_primary_inverse">#dd000000</color>
 	<color name="color_secondary">#b2ffffff</color>
 
 	<color name="window_background">#ff303030</color>
-	<color name="thread_item_highlight">#2D3E50</color>
+	<color name="card_background">@color/cardview_dark_background</color>
+	<color name="divider">#666666</color>
+
+	<color name="thread_item_background">@color/window_background</color>
+	<color name="thread_item_highlight">#000000</color>
 
 </resources>
