--- a/briar-android/src/main/res/values/color.xml
+++ b/briar-android/src/main/res/values/color.xml
@@ -3,11 +3,12 @@
 	<color name="briar_blue">#2D3E50</color>
 	<color name="briar_blue_dark">#0F1720</color>
 	<color name="briar_blue_light">#4F6C8C</color>
-	<color name="briar_gold">#FCCF1C</color>
+	<color name="briar_blue_light2">#5a7da3</color>
 	<color name="briar_green_light">#95D220</color>
 	<color name="briar_link">#06B9FF</color>
 
 	<color name="window_background">#fffafafa</color>
+	<color name="card_background">@color/cardview_light_background</color>
 	<color name="action_bar_text">#FFFFFF</color>
 	<color name="button_bar_background">#FFFFFF</color>
 	<color name="private_message_date">#AAAAAA</color>
@@ -32,17 +33,19 @@
 	<color name="briar_text_secondary_inverse">#b4ffffff</color>
 	<color name="briar_text_tertiary">#61000000</color>
 	<color name="briar_text_tertiary_inverse">#80ffffff</color>
+	<color name="preference_category">@color/briar_blue_light</color>
+
 	<color name="briar_button_positive">@color/briar_link</color>
 	<color name="briar_button_negative">#ff0000</color>
 	<color name="briar_warning_background">#ff0000</color>
-	<color name="emoji_text_color">#ff000000</color>
 
 	<color name="emoji_pager_background">@color/window_background</color>
 
 	<color name="thread_indicator">#9e9e9e</color>
+	<color name="thread_item_background">#eceff1</color>
+	<color name="thread_item_highlight">#ffffff</color>
 	<color name="divider">#c1c1c1</color>
 	<color name="menu_background">#FFFFFF</color>
 
 	<color name="spinner_border">#61000000</color> <!-- 38% Black -->
-	<color name="thread_item_highlight">#729ecc</color>
 </resources>
