Create a dedicated qrCodeView

--- a/briar-android/src/main/res/layout/fragment_keyagreement_qr.xml
+++ b/briar-android/src/main/res/layout/fragment_keyagreement_qr.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
@@ -43,45 +42,11 @@
 				tools:text="Connection failed"/>
 		</LinearLayout>
 
-		<FrameLayout
-			android:id="@+id/qr_code_container"
+		<org.briarproject.briar.android.view.QrCodeView
+			android:id="@+id/qr_code_view"
 			android:layout_width="match_parent"
 			android:layout_height="0dp"
 			android:layout_weight="1"
-			android:background="@android:color/white">
-
-			<ProgressBar
-				style="?android:attr/progressBarStyleLarge"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center"/>
-
-			<RelativeLayout
-				android:layout_width="match_parent"
-				android:layout_height="match_parent">
-
-				<ImageView
-					android:id="@+id/qr_code"
-					android:layout_width="match_parent"
-					android:layout_height="match_parent"
-					android:layout_centerInParent="true"
-					android:contentDescription="@string/qr_code"
-					android:scaleType="fitCenter"
-					tools:src="@drawable/startup_lock"/>
-
-				<ImageView
-					android:id="@+id/fullscreen_button"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_alignParentBottom="true"
-					android:layout_alignParentEnd="true"
-					android:layout_alignParentRight="true"
-					android:layout_margin="@dimen/margin_small"
-					android:alpha="0.54"
-					android:background="?selectableItemBackground"
-					android:contentDescription="@string/show_qr_code_fullscreen"
-					android:src="@drawable/ic_fullscreen_black_48dp"/>
-			</RelativeLayout>
-		</FrameLayout>
+			android:background="@android:color/white"/>
 	</LinearLayout>
 </FrameLayout>
