Improvements: * Force LTR by prefixing language names with the LRM marker * Add Polish * Cleanup

--- a/briar-android/src/main/res/values/arrays.xml
+++ b/briar-android/src/main/res/values/arrays.xml
@@ -41,6 +41,7 @@
 		<item>nb</item>
 		<item>nl</item>
 		<item>oc</item>
+		<item>pl</item>
 		<item>pt-BR</item>
 		<item>ro</item>
 		<item>ru</item>
