Fix padding in activity_open_database
Closes #1297

--- a/briar-android/src/main/res/layout/activity_open_database.xml
+++ b/briar-android/src/main/res/layout/activity_open_database.xml
@@ -36,6 +36,8 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_margin="8dp"
+		android:paddingLeft="@dimen/margin_large"
+		android:paddingRight="@dimen/margin_large"
 		android:text="@string/startup_open_database"
 		android:textSize="@dimen/text_size_large"
 		app:layout_constraintBottom_toBottomOf="parent"
