--- a/briar-android/src/main/res/layout/activity_create_forum.xml
+++ b/briar-android/src/main/res/layout/activity_create_forum.xml
@@ -12,7 +12,8 @@
 		android:id="@+id/createForumNameLayout"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		app:errorEnabled="true">
+		app:errorEnabled="true"
+		app:hintEnabled="false">
 
 		<EditText
 			android:id="@+id/createForumNameEntry"
@@ -28,7 +29,8 @@
 		android:id="@+id/createForumButton"
 		style="@style/BriarButton"
 		android:enabled="false"
-		android:text="@string/create_forum_button"/>
+		android:text="@string/create_forum_button"
+		tools:enabled="true"/>
 
 	<ProgressBar
 		android:id="@+id/createForumProgressBar"
