Add buttons to show passwords wherever they can be entered
Closes #1096

--- a/briar-android/src/main/res/layout/activity_change_password.xml
+++ b/briar-android/src/main/res/layout/activity_change_password.xml
@@ -24,7 +24,8 @@
 			android:layout_height="wrap_content"
 			android:layout_centerHorizontal="true"
 			app:errorEnabled="true"
-			app:hintEnabled="false">
+			app:hintEnabled="false"
+			app:passwordToggleEnabled="true">
 
 			<EditText
 				android:id="@+id/current_password_entry"
@@ -42,7 +43,8 @@
 			android:layout_below="@id/current_password_entry_wrapper"
 			android:layout_centerHorizontal="true"
 			app:errorEnabled="true"
-			app:hintEnabled="false">
+			app:hintEnabled="false"
+			app:passwordToggleEnabled="true">
 
 			<EditText
 				android:id="@+id/new_password_entry"
@@ -60,7 +62,8 @@
 			android:layout_below="@id/new_password_entry_wrapper"
 			android:layout_centerHorizontal="true"
 			app:errorEnabled="true"
-			app:hintEnabled="false">
+			app:hintEnabled="false"
+			app:passwordToggleEnabled="true">
 
 			<EditText
 				android:id="@+id/new_password_confirm"
