--- a/briar-android/src/main/res/layout/activity_password.xml
+++ b/briar-android/src/main/res/layout/activity_password.xml
@@ -22,7 +22,8 @@
 			android:layout_height="wrap_content"
 			android:layout_centerHorizontal="true"
 			app:errorEnabled="true"
-			app:hintEnabled="false">
+			app:hintEnabled="false"
+			app:passwordToggleEnabled="true">
 
 			<EditText
 				android:id="@+id/edit_password"
