--- a/briar-android/src/main/res/layout/fragment_setup_password.xml
+++ b/briar-android/src/main/res/layout/fragment_setup_password.xml
@@ -26,7 +26,8 @@
 			app:hintEnabled="false"
 			app:layout_constraintLeft_toLeftOf="parent"
 			app:layout_constraintRight_toRightOf="parent"
-			app:layout_constraintTop_toTopOf="parent">
+			app:layout_constraintTop_toTopOf="parent"
+			app:passwordToggleEnabled="true">
 
 			<android.support.design.widget.TextInputEditText
 				android:id="@+id/password_entry"
@@ -62,7 +63,8 @@
 			app:hintEnabled="false"
 			app:layout_constraintLeft_toLeftOf="parent"
 			app:layout_constraintRight_toRightOf="parent"
-			app:layout_constraintTop_toBottomOf="@+id/strength_meter">
+			app:layout_constraintTop_toBottomOf="@+id/strength_meter"
+			app:passwordToggleEnabled="true">
 
 			<android.support.design.widget.TextInputEditText
 				android:id="@+id/password_confirm"
