--- a/briar-android/src/main/res/layout/qr_code_view.xml
+++ b/briar-android/src/main/res/layout/qr_code_view.xml
@@ -3,7 +3,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	tools:showIn="@layout/list_item_forum">
+	tools:showIn="@layout/fragment_keyagreement_qr">
 
 	<ProgressBar
 		style="?android:attr/progressBarStyleLarge"
@@ -20,12 +20,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:contentDescription="@string/qr_code"
-			android:scaleType="fitCenter"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintLeft_toLeftOf="parent"
-			app:layout_constraintRight_toRightOf="parent"
-			app:layout_constraintTop_toTopOf="parent"
-			tools:src="@drawable/startup_lock"/>
+			android:scaleType="fitCenter"/>
 
 		<ImageView
 			android:id="@+id/fullscreen_button"
@@ -39,5 +34,6 @@
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintRight_toRightOf="parent"/>
+
 	</android.support.constraint.ConstraintLayout>
 </merge>
