--- a/briar-android/src/main/res/color/button_text.xml
+++ b/briar-android/src/main/res/color/button_text.xml
@@ -2,7 +2,7 @@
 <selector
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
-		android:color="?attr/colorControlNormal"
+		android:color="@color/briar_button_text_disabled"
 		android:state_enabled="false"/>
 	<item
 		android:color="#ffffffff"/>
