--- a/briar-android/src/main/res/values/color.xml
+++ b/briar-android/src/main/res/values/color.xml
@@ -30,6 +30,7 @@
 
 	<color name="briar_button_positive">@color/briar_link</color>
 	<color name="briar_button_negative">#ff0000</color>
+	<color name="briar_button_text_disabled">#28000000</color>
 	<color name="briar_warning_background">#ff0000</color>
 
 	<color name="thread_indicator">#9e9e9e</color>
