--- a/briar-android/src/main/res/drawable/notification_private_message.xml
+++ b/briar-android/src/main/res/drawable/notification_private_message.xml
@@ -6,5 +6,5 @@
         android:viewportWidth="24.0">
 	<path
 		android:fillColor="#FFFFFFFF"
-		android:pathData="M20,4L4,4c-1.1,0 -1.99,0.9 -1.99,2L2,18c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2L22,6c0,-1.1 -0.9,-2 -2,-2zM20,8l-8,5 -8,-5L4,6l8,5 8,-5v2z"/>
+		android:pathData="M20,2L4,2c-1.1,0 -1.99,0.9 -1.99,2L2,22l4,-4h14c1.1,0 2,-0.9 2,-2L22,4c0,-1.1 -0.9,-2 -2,-2zM18,14L6,14v-2h12v2zM18,11L6,11L6,9h12v2zM18,8L6,8L6,6h12v2z"/>
 </vector>
