Add an option to not show the sign-in reminder
This is done via another preference in the settings screen
and an action button attached to the notification itself

--- a/briar-android/src/main/res/xml/settings.xml
+++ b/briar-android/src/main/res/xml/settings.xml
@@ -83,6 +83,12 @@
 
 		<CheckBoxPreference
 			android:defaultValue="true"
+			android:key="pref_key_notify_sign_in"
+			android:summary="@string/notify_sign_in_summary"
+			android:title="@string/notify_sign_in_title"/>
+
+		<CheckBoxPreference
+			android:defaultValue="true"
 			android:key="pref_key_notify_private_messages"
 			android:persistent="false"
 			android:summary="@string/notify_private_messages_setting_summary"
