--- a/briar-android/src/main/res/layout/text_input_view_large.xml
+++ b/briar-android/src/main/res/layout/text_input_view_large.xml
@@ -27,17 +27,18 @@
 			android:layout_height="match_parent"
 			android:orientation="horizontal">
 
-			<org.thoughtcrime.securesms.components.emoji.EmojiToggle
+			<android.support.v7.widget.AppCompatImageButton
 				android:id="@+id/emoji_toggle"
 				android:layout_width="@dimen/text_input_height"
 				android:layout_height="@dimen/text_input_height"
 				android:layout_gravity="bottom"
 				android:background="?attr/selectableItemBackground"
+				android:src="@drawable/ic_emoji_toggle"
 				android:padding="@dimen/margin_small"
 				android:scaleType="center"
 				app:tint="?attr/colorControlNormal"/>
 
-			<org.thoughtcrime.securesms.components.emoji.EmojiEditText
+			<com.vanniktech.emoji.EmojiEditText
 				android:id="@+id/input_text"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
@@ -63,11 +64,5 @@
 		android:layout_marginLeft="@dimen/margin_small"
 		android:layout_marginRight="@dimen/margin_small"
 		android:layout_marginStart="@dimen/margin_small"/>
-
-	<org.thoughtcrime.securesms.components.emoji.EmojiDrawer
-		android:id="@+id/emoji_drawer"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:visibility="gone"/>
 
 </merge>
