--- a/briar-android/src/main/res/layout/introduction_message.xml
+++ b/briar-android/src/main/res/layout/introduction_message.xml
@@ -36,7 +36,7 @@
 					android:layout_marginStart="@dimen/listitem_horizontal_margin"
 					tools:src="@mipmap/ic_launcher_round"/>
 
-				<org.thoughtcrime.securesms.components.emoji.EmojiTextView
+				<com.vanniktech.emoji.EmojiTextView
 					android:id="@+id/nameContact1"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
@@ -73,7 +73,7 @@
 					android:layout_marginStart="@dimen/listitem_horizontal_margin"
 					tools:src="@mipmap/ic_launcher_round"/>
 
-				<org.thoughtcrime.securesms.components.emoji.EmojiTextView
+				<com.vanniktech.emoji.EmojiTextView
 					android:id="@+id/nameContact2"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
