--- a/briar-android/src/main/res/layout/list_item_blog_comment.xml
+++ b/briar-android/src/main/res/layout/list_item_blog_comment.xml
@@ -20,7 +20,7 @@
 		android:padding="@dimen/listitem_vertical_margin"
 		app:persona="commenter"/>
 
-	<org.thoughtcrime.securesms.components.emoji.EmojiTextView
+	<com.vanniktech.emoji.EmojiTextView
 		android:id="@+id/bodyView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
