--- a/briar-android/src/main/res/layout/list_item_blog_post.xml
+++ b/briar-android/src/main/res/layout/list_item_blog_post.xml
@@ -50,7 +50,7 @@
 				android:src="@drawable/ic_repeat"
 				app:tint="?attr/colorControlNormal"/>
 
-			<org.thoughtcrime.securesms.components.emoji.EmojiTextView
+			<com.vanniktech.emoji.EmojiTextView
 				android:id="@+id/bodyView"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
