--- a/briar-android/src/main/res/layout/list_item_contact_small.xml
+++ b/briar-android/src/main/res/layout/list_item_contact_small.xml
@@ -18,7 +18,7 @@
 		android:layout_marginStart="@dimen/listitem_horizontal_margin"
 		tools:src="@mipmap/ic_launcher_round"/>
 
-	<org.thoughtcrime.securesms.components.emoji.EmojiTextView
+	<com.vanniktech.emoji.EmojiTextView
 		android:id="@+id/nameView"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
