--- a/briar-android/src/main/res/layout/list_item_forum.xml
+++ b/briar-android/src/main/res/layout/list_item_forum.xml
@@ -19,7 +19,7 @@
 		android:layout_marginRight="@dimen/listitem_horizontal_margin"
 		android:layout_marginTop="@dimen/listitem_horizontal_margin"/>
 
-	<org.thoughtcrime.securesms.components.emoji.EmojiTextView
+	<com.vanniktech.emoji.EmojiTextView
 		android:id="@+id/forumNameView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
